Reestilização e Retorno Vizual

--- a/index.html
+++ b/index.html
@@ -4,15 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Atipiquizz</title>
-    <div class="BemVindo">
-        <h2>Bem-Vindo ao Atipiquizz</h2>
-    </div>
+    <section>
+        <div class="BemVindo">
+            <h2>Bem-Vindo ao Atipiquizz</h2>
+        </div>
+    </section>
     <link rel="stylesheet" href="styles/index.css">
 </head>
 <body>
     <section class="Pergunta">
         <div class="enunciado">
-            <h3>O autismo é uma condição caracterizada por:</h3>
+            <h3>1.  O autismo é uma condição caracterizada por:</h3>
         </div>
         <div class="respostas">
             <input type="button" id="1" value="A| Deficiência visual">
@@ -23,7 +25,7 @@
     </section>
     <section class="Pergunta">
         <div class="enunciado">
-            <h3>Qual alternativa representa uma característica comum entre pessoas com TEA?</h3>
+            <h3>2.  Qual alternativa representa uma característica comum entre pessoas com TEA?</h3>
         </div>
         <div class="respostas">
             <input type="button" id="5" value="A| Facilidade de adesão á rotina">
@@ -34,7 +36,7 @@
     </section>
     <section class="Pergunta">
         <div class="enunciado">
-            <h3>O machismo estrutural contribui de fato para o Masking?</h3>
+            <h3>3.  O machismo estrutural contribui de fato para o Masking?</h3>
         </div>
         <div class="respostas">
             <input type="button" id="9" value="A| Não , o machismo não tem interferência direta no fenômeno">
@@ -45,7 +47,7 @@
     </section>
     <section class="Pergunta">
         <div class="enunciado">
-            <h3>A hereditariedade deve ser considerada um dos fatores determinantes na realização de um diagnóstico?</h3>
+            <h3>4.  A hereditariedade deve ser considerada um dos fatores determinantes na realização de um diagnóstico?</h3>
         </div>
         <div class="respostas">
             <input type="button" id="13" value="A| Sim , porque á partir da determinação de existência dessa relação pode-se elaborar uma estratégia mais bem elaborada acerca da possibilidade de TEA">
