--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
             <input type="button" id="16" value="D| Sim , hereditariedade é o principal fator a ser analisado">
         </div>
     </section>
-    <section>
+    <div class="BotaoFinalizar">
         <input type="button" id="Finalizar" value="Finalizar Quizz">
-    </section>
+    </div>
     <script src="javascript\index.js"></script>
 </body>
 </html>
