Separação de Perguntas

--- a/index.html
+++ b/index.html
@@ -12,53 +12,11 @@
     <link rel="stylesheet" href="styles/index.css">
 </head>
 <body>
-    <section class="Pergunta">
-        <div class="enunciado">
-            <h3>1.  O autismo é uma condição caracterizada por:</h3>
-        </div>
-        <div class="respostas">
-            <input type="button" id="1" value="A| Deficiência visual">
-            <input type="button" id="2" value="B| Altura acima da média">
-            <input type="button" id="3" value="C| Hiperatividade">
-            <input type="button" id="4" value="D| Dificuldades de comunicação e interação social">
+    <section class="Inicio-Quiz">
+        <div class="Inicio">
+            <input id="Next" type="button" value="Iniciar">
         </div>
     </section>
-    <section class="Pergunta">
-        <div class="enunciado">
-            <h3>2.  Qual alternativa representa uma característica comum entre pessoas com TEA?</h3>
-        </div>
-        <div class="respostas">
-            <input type="button" id="5" value="A| Facilidade de adesão á rotina">
-            <input type="button" id="6" value="B| Extroversão elevada">
-            <input type="button" id="7" value="C| Dificuldades na tomada de decisões">
-            <input type="button" id="8" value="D| Dificuldade em situações de Transição e mudanças">
-        </div>
-    </section>
-    <section class="Pergunta">
-        <div class="enunciado">
-            <h3>3.  O machismo estrutural contribui de fato para o Masking?</h3>
-        </div>
-        <div class="respostas">
-            <input type="button" id="9" value="A| Não , o machismo não tem interferência direta no fenômeno">
-            <input type="button" id="10" value="B| Sim , podendo levar também á transtornos psicológicos como ansiedade e depressão">
-            <input type="button" id="11" value="C| Sim , o machismo é o principal causador de Masking na sociedade">
-            <input type="button" id="12" value="D| Nenhuma das alternativas">
-        </div>
-    </section>
-    <section class="Pergunta">
-        <div class="enunciado">
-            <h3>4.  A hereditariedade deve ser considerada um dos fatores determinantes na realização de um diagnóstico?</h3>
-        </div>
-        <div class="respostas">
-            <input type="button" id="13" value="A| Sim , porque á partir da determinação de existência dessa relação pode-se elaborar uma estratégia mais bem elaborada acerca da possibilidade de TEA">
-            <input type="button" id="14" value="B| Não, hereditariedade não contribui para um diagnóstico preciso">
-            <input type="button" id="15" value="C| Não , somente se os avós do indivíduo possuírem TEA">
-            <input type="button" id="16" value="D| Sim , hereditariedade é o principal fator a ser analisado">
-        </div>
-    </section>
-    <div class="BotaoFinalizar">
-        <input type="button" id="Finalizar" value="Finalizar Quizz">
-    </div>
-    <script src="javascript\index.js"></script>
+    <script src=""></script>
 </body>
 </html>
