--- a/index.html
+++ b/index.html
@@ -9,12 +9,16 @@
             <h2>Bem-Vindo ao Atipiquizz</h2>
         </div>
     </section>
-    <link rel="stylesheet" href="styles/index.css">
+    <link rel="stylesheet" href="styles\home.css">
 </head>
 <body>
     <section class="Inicio-Quiz">
         <div class="Inicio">
-            <input id="Next" type="button" value="Iniciar">
+            <div class="Apresentação">
+                <h3>Este é o Atipiquizz , seja bem-vindo!!</h3>
+                <p>Este pequeno projeto visa abordar temas acerca do autismo de maneira interativa e educativa, promovendo a conscientização e a inclusão social. Através de atividades práticas, workshops educativos e recursos digitais, buscamos aumentar o conhecimento sobre o autismo, facilitando a compreensão das experiências de pessoas autistas. O projeto também oferece suporte às famílias e fomenta um ambiente mais inclusivo e informado, onde todos possam contribuir para uma sociedade mais compreensiva e acolhedora.</p>
+            </div>
+            <input class="Next" type="button" value="Iniciar">
         </div>
     </section>
     <script src=""></script>
