--- a/index.html
+++ b/index.html
@@ -1,26 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Atipiquizz</title>
-    <section>
-        <div class="BemVindo">
-            <h2>Bem-Vindo ao Atipiquizz</h2>
-        </div>
-    </section>
-    <link rel="stylesheet" href="styles\home.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Quiz sobre Autismo</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <section class="Inicio-Quiz">
-        <div class="Inicio">
-            <div class="Apresentação">
-                <h3>Este é o Atipiquizz , seja bem-vindo!!</h3>
-                <p>Este pequeno projeto visa abordar temas acerca do autismo de maneira interativa e educativa, promovendo a conscientização e a inclusão social. Através de atividades práticas, workshops educativos e recursos digitais, buscamos aumentar o conhecimento sobre o autismo, facilitando a compreensão das experiências de pessoas autistas. O projeto também oferece suporte às famílias e fomenta um ambiente mais inclusivo e informado, onde todos possam contribuir para uma sociedade mais compreensiva e acolhedora.</p>
-            </div>
-            <input class="Next" type="button" value="Iniciar">
-        </div>
-    </section>
-    <script src=""></script>
+  <div class="start-btn-container">
+    <h2>Quiz</h2>
+    <p>Teste seu conhecimento sobre autismo</p>
+    <button class="start-btn">Começar Quiz</button>
+  </div>
+
+  <div class="quiz-container">
+    <h1>Quiz</h1>
+    <h2 class="question"></h2>
+    <div class="options"></div>
+    <button class="next-btn">Próximo</button>
+  </div>
+
+  <div class="quiz-result"></div>
+
+  <script src="main.js"></script>
 </body>
 </html>
