--- a/rep.html
+++ b/rep.html
@@ -10,17 +10,17 @@
   <div class="repository-container">
     <h2>Mais sobre o tema</h2>
     <p>Abaixo você encontra mais Informações sobre autismo.</p>
-    <a href="https://link-do-seu-repositorio" target="_blank" class="repository-link">Nome do artigo</a>
-    <a href="https://link-do-seu-repositorio" target="_blank" class="repository-link">Nome do artigo</a>
-    <a href="https://link-do-seu-repositorio" target="_blank" class="repository-link">Nome do artigo</a>
-    <a href="https://link-do-seu-repositorio" target="_blank" class="repository-link">Nome do artigo</a>
+    <a href="https://repositorio.ufscar.br/bitstream/handle/ufscar/15923/MENINAS%20E%20MULHERES%20COM%20TRANSTORNO%20DO%20ESPECTRO%20DO%20AUTISMO%20DIAGN%C3%93STICOS,%20RECONHECIMENTOS%20E%20VIV%C3%8ANCIAS.pdf?sequence=1&isAllowed=y" target="_blank" class="repository-link">MENINAS E MULHERES COM TRANSTORNO DO ESPECTRO DO AUTISMO</a>
+    <a href="https://pubmed.ncbi.nlm.nih.gov/36601266/" target="_blank" class="repository-link">A Conceptual Analysis of Autistic Masking: Understanding the Narrative of Stigma and the Illusion of Choice</a>
+    <a href="https://www.researchgate.net/publication/322897831_Cerebral_Hypoperfusion_in_Autism_Spectrum_Disorder" target="_blank" class="repository-link">Cerebral Hypoperfusion in Autism Spectrum Disorder</a>
     
     <h3>Alguns sites</h3>
     <ul class="links-list">
-      <li><a href="https://exemplo1.com" target="_blank">Exemplo 1</a></li>
-      <li><a href="https://exemplo2.com" target="_blank">Exemplo 2</a></li>
-      <li><a href="https://exemplo3.com" target="_blank">Exemplo 3</a></li>
-      <li><a href="https://exemplo4.com" target="_blank">Exemplo 4</a></li>
+      <li><a href="https://www.cdc.gov/ncbddd/autism/data/" target="_blank">Centers for Disease Control and Prevention, Autism Data Visualization Tool. CDC.</a></li>
+      <li><a href="https://fonoaudiologiacampinas.com/o-que-e-diagnostico-diferencial/." target="_blank">Fonoaudiologia Campinas, "O que é diagnóstico diferencial?," Fonoaudiologia Campinas.</a></li>
+      <li><a href="https://raciocinioclinico.com.br/teoria-do-processo-dual/" target="_blank">Teoria do processo dual", Raciocínio Clínico, 5 de fevereiro de 2023.</a></li>
+      <li><a href="https://www.autismoemdia.com.br/blog/o-que-e-estereotipia-e-porque-e-tao-comum-no-tea/ " target="_blank">O que é estereotipia e porque é tão comum no TEA
+    </a></li>
     </ul>
   </div>
 </body>
